--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
   <body>
 
     <div class="container-fluid">
-      <%= render "common/navbar" %>
-      <%= render "common/flashes" %>
+       <div class="row">
+         <%= render "common/navbar" %>
+       </div>
+         <%= render "common/flashes" %>
 
-        <%= yield %>
-      
+         <%= yield %>
+
 
 
     </div>
