--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -1,4 +1,10 @@
-<h1> Add a job </h1>
+<div class="col-md-12  col-centered">
+
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+     <h3 class="panel-title">Add a job</h3>
+     </div>
+    <div class="panel-body">
 
 <%= simple_form_for [:admin,@job] do |f| %>
 
@@ -9,5 +15,8 @@
 <%= f.input :contact_email %>
 <%= f.input :is_hidden %>
 
-  <%= f.submit "Submit" %>
+  <%= f.submit "Submit",class: 'btn btn-danger' %>
 <% end %>
+</div>
+</div>
+</div>
