--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,8 @@
-<footer class="container" style="margin-top: 100px;">
-  <p class="text-center">Copyright ©2016 Rails101
-    <br>Design by Eric
-  </p>
+<footer class="text-center">
+   <div class="footer-below">
+
+       <p class="text-center">Copyright ©2017 Fitness listing
+           <br>Design by Eric
+       </p>
+   </div>
 </footer>
