--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,13 +1,21 @@
-<h1> Add a job </h1>
+<div class="col-md-10  col-centered">
 
-<%= simple_form_for @job do |f| %>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+   <h3 class="panel-title">Add a job</h3>
+   </div>
+  <div class="panel-body">
 
-<%= f.input :title %>
-<%= f.input :description %>
-<%= f.input :wage_lower_bound, :label => "薪资下限" %>
-<%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :contact_email %>
-<%= f.input :is_hidden %>
+    <%= simple_form_for @job do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :wage_lower_bound, :label => "薪资下限" %>
+    <%= f.input :wage_upper_bound, :label => "薪资上限" %>
+    <%= f.input :contact_email %>
+    <%= f.input :is_hidden %>
 
-  <%= f.submit "Submit" %>
-<% end %>
+      <%= f.submit "Submit" ,class: 'btn btn-danger'%>
+    <% end %>
+  </div>
+</div>
+</div>
