--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,9 +1,17 @@
-<h1> <%= @job.title %> </h1>
+<div class="col-md-10 col-centered">
+
+  <div class="panel panel-default">
+  <div class="panel-heading">
+    <h1><%= @job.title %></h1>
+  </div>
+  <div class="panel-body">
+    <%= simple_format(@job.description) %>
+    <div class="text-center">
+    <%= link_to("投交履历", new_job_resume_path(@job), :style => "font-size: 30px; text-decoration: underline;") %>
+  </div>
+</div>
 
 <p>
-  <%= simple_format(@job.description) %>
-  <div class="text-center">
-  <%= link_to("投交履历", new_job_resume_path(@job), :style => "font-size: 30px; text-decoration: underline;") %>
   </div>
 
 </p>
