--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,9 +1,14 @@
-<h3> 投交履历到 <%= @job.title %> </h3>
+<div class="col-md-10 col-centered">
 
-<hr>
-
-<%= simple_form_for [@job, @resume] do |f| %>
-  <%= f.input :content %>
-  <%= f.input :attachment %>
-  <%= f.submit "送出" %>
-<% end %>
+  <div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3>投交履历到 <%= @job.title %> </h3>
+  </div>
+  <div class="panel-body">
+    <%= simple_form_for [@job, @resume] do |f| %>
+      <%= f.input :content %>
+      <%= f.input :attachment %>
+      <%= f.submit "送出" %>
+    <% end %>
+  </div>
+</div>
