--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -39,7 +39,7 @@
                  <div class="modal-dialog" role="document">
                    <div class="loginmodal-container">
 
-                      <h2>登录</h2>
+                      <h2 class="text-center">登 录</h2>
                       <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
                         <div class="form-inputs">
                           <%= f.input :email,:label => "邮箱", required: false, autofocus: true %>
@@ -57,7 +57,7 @@
                <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
                  <div class="modal-dialog">
                    <div class="loginmodal-container">
-                     <h2>注册</h2>
+                     <h2 class="text-center">注 册</h2>
                        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                        <%= f.error_notification %>
                        <div class="form-inputs">
